JCR-3206 JSR-283 support for RMI / Implementation of the missing versioning parts
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/trunk@1377571 13f79535-47bb-0310-9956-ffa450edef68